[metadata]
name = cbelt
version = 0.1.2
author = Michael Hirschberg, Alexander Krasilnikov
author_email = michael.hirschberg@couchbase.com, alexander.krasilnikov
description = Couchbase ELT (cbelt) is a simple and extensible data transfer framework
long_description = file: README.rst, CHANGELOG.rst, LICENSE.rst
keywords = couchbase, elt, etl
license = BSD-3-Clause
classifiers =
    Framework :: Couchbase :: SQLAlchemy :: Pandas
    Programming Language :: Python :: 3

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.9
install_requires =
    Click
    couchbase
    pandas
    SQLAlchemy
    tqdm
    google-cloud-bigquery
    google-cloud-bigquery-storage
    pyarrow
    sqlalchemy-bigquery

[options.entry_points]
console_scripts =
    cbelt = cbelt.app:cli
